--- a/tech_savvy_app/templates/tech_savvy_app/search_post.html
+++ b/tech_savvy_app/templates/tech_savvy_app/search_post.html
@@ -9,7 +9,7 @@
 
       {% for search in search_site %}
       <ul>
-        <li>{{ search.author }}: <a href="{% url 'post-detail' search.id %}">{{ search.title }}</a> - {{ search.content }} </li>
+        <li>{{ search.author }}: <a href="{% url 'post-detail' search.id %}">{{ search.title }}</a> - {{ search.content|safe }} </li>
       </ul>
       {% endfor %}
     {% else %}
